更新文件大小为 2M

--- a/技术设计.md
+++ b/技术设计.md
@@ -224,7 +224,7 @@ CREATE TABLE shares (
 
 - **Session**: HttpOnly, Secure, SameSite=Lax Cookie 存储 JWT。
 - **CORS**: 同源策略，无跨域需求。
-- **Input Validation**: 校验文件 MIME Type (`image/svg+xml`)。
+- **Input Validation**: 校验文件 MIME Type (`image/svg+xml`) 和大小 (Max 2MB)。
 - **XSS Prevention**: SVG 渲染前移除 `<script>` 和 `on*` 事件。
 
 ## 8. 部署配置 (Deployment)
