增加用户总量限制

--- a/技术设计.md
+++ b/技术设计.md
@@ -82,6 +82,7 @@ CREATE TABLE users (
     avatar_url TEXT,
     role TEXT DEFAULT 'user', -- 'admin' | 'user'
     status TEXT DEFAULT 'pending', -- 'pending' | 'active' | 'locked'
+    storage_limit INTEGER DEFAULT 104857600, -- 100MB in bytes
     created_at DATETIME DEFAULT CURRENT_TIMESTAMP
 );
 
@@ -130,8 +131,9 @@ CREATE TABLE shares (
 | GET | `/auth/me` | Get current user info | Yes |
 | POST | `/auth/logout` | Clear session & redirect | Yes |
 | **Admin** | | | |
-| GET | `/api/admin/users` | List users (w/ filters) | Yes (Admin) |
+| GET | `/api/admin/users` | List users (w/ filters & usage) | Yes (Admin) |
 | PATCH | `/api/admin/users/:id/status` | Update user status | Yes (Admin) |
+| PATCH | `/api/admin/users/:id/quota` | Update user storage limit | Yes (Admin) |
 | **Files** | | | |
 | GET | `/api/files` | List my files | Yes |
 | POST | `/api/files` | Upload new file | Yes |
@@ -224,7 +226,7 @@ CREATE TABLE shares (
 
 - **Session**: HttpOnly, Secure, SameSite=Lax Cookie 存储 JWT。
 - **CORS**: 同源策略，无跨域需求。
-- **Input Validation**: 校验文件 MIME Type (`image/svg+xml`) 和大小 (Max 2MB)。
+- **Input Validation**: 校验文件 MIME Type (`image/svg+xml`) 、大小 (Max 2MB) 及用户剩余容量。
 - **XSS Prevention**: SVG 渲染前移除 `<script>` 和 `on*` 事件。
 
 ## 8. 部署配置 (Deployment)
