--- a/需求说明_v2.md
+++ b/需求说明_v2.md
@@ -31,8 +31,10 @@
 - **文件限制**:
     - 格式: 仅支持 `.svg` 扩展名的文件。
     - 大小: 最大 2MB。
+    - 容量: 默认每位用户 100MB 存储配额。管理员可调整。
 - **处理逻辑**:
     - 上传前校验文件格式和大小。
+    - 服务端校验用户剩余容量，超出则拒绝上传。
     - 服务端接收并验证。
     - 解析 SVG 元数据（宽、高、ViewBox 等）。
     - 存储文件内容至 R2 对象存储。
@@ -83,12 +85,14 @@
 
 #### 3.5.2 用户管理列表 (Admin Dashboard)
 为管理员提供专属的用户管理页面。
-- **列表展示**:
-    - **用户账号**: GitHub 用户名/头像。
-    - **角色**: Admin / User。
-    - **注册时间**: 首次登录时间。
+- **用户管理**:
+    - 查看用户列表（含头像、用户名、注册时间、角色、**已用容量/总容量**）。
+    - 筛选用户（按角色、状态）。
+    - 搜索用户。
+    - 修改用户状态 (Approve, Lock/Unlock)。
+    - **修改用户容量配额**。
     - **状态**: Pending / Active / Locked。
-    - **操作**: 审核、锁定/解锁。
+    - **操作**: 审核、锁定/解锁、修改额度。
 - **筛选与搜索**:
     - 支持按 **角色** (Admin/User) 筛选。
     - 支持按 **状态** (Pending/Active/Locked) 筛选。
